--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
+     <div class="banner">
+        <div class="banner_contents">
+            <h1 class="banner_title">Money Heist</h1>
+            <div class="banner_buttons">
+                <button class="banner_button">Play</button>
+                <button class="banner_button">My List</button>
+            </div>
+            <div class="banner_description">
+                To carry out the biggest hiest in history, a mysterious man called The Professor recruits a band of eight robbers.
+            </div>
+        </div>
+    </div>
 
     <div class="row">
         <h2>NETFLIX ORIGINALS</h2>
