--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 To carry out the biggest hiest in history, a mysterious man called The Professor recruits a band of eight robbers.
             </div>
         </div>
+         <div class="banner_fadeBottom"></div>
     </div>
 
     <div class="row">
